--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -17,7 +17,7 @@ jobs:
 
       - name: Upload to S3
         run: |
-          aws s3 cp acebook-node-template-team-evergreen/ s3://team-evergreen
+          aws s3 cp /app.js s3://team-evergreen
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
