--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -18,6 +18,8 @@ jobs:
     steps:
       - uses: aws-actions/configure-aws-credentials@v4
         with:
+         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
          aws-region: us-west-2
       # Step 2: Create CodeDeploy Deployment
       - name: Create CodeDeploy Deployment
