--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -4,27 +4,19 @@ on:
     branches: [ main ]
 
 jobs:
-  continuous-integration:
-    runs-on: ubuntu-latest
-    steps:
-      # Step 1: Checkout code
-      - uses: actions/checkout@v2
-
-
   continuous-deployment:
     runs-on: ubuntu-latest
-    needs: [continuous-integration]
-    if: github.ref == 'refs/heads/main'
     steps:
-      # Step 2: Create CodeDeploy Deployment
       - name: Create CodeDeploy Deployment
         id: deploy
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
           aws deploy create-deployment \
           --application-name team-evergreen-codedeploy \
           --deployment-group-name team-evergreen \
           --deployment-config-name CodeDeployDefault.OneAtATime \
-          --github-location repository=${{ github.repository }},commitId=${{ github.sha }}
+          --github-location repository=LloydDunn/acebook-node-template-team-evergreen,commitId=47134a6a348685a40e89ae8c2cc10753c61f5d61 \
+          --region us-west-2
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          
