--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -4,9 +4,23 @@ on:
     branches: [ main ]
 
 jobs:
-  continuous-deployment:
+  continuous-integration:
     runs-on: ubuntu-latest
     steps:
+      # Step 1: Checkout code
+      - uses: actions/checkout@v2
+
+
+  continuous-deployment:
+    runs-on: ubuntu-latest
+    needs: [continuous-integration]
+    if: github.ref == 'refs/heads/main'
+    steps:
+      - uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-region: eu-west-2
+          role-to-assume: my-github-actions-role
+      # Step 2: Create CodeDeploy Deployment
       - name: Create CodeDeploy Deployment
         id: deploy
         run: |
@@ -14,9 +28,5 @@ jobs:
           --application-name team-evergreen-codedeploy \
           --deployment-group-name team-evergreen \
           --deployment-config-name CodeDeployDefault.OneAtATime \
-          --github-location repository=LloydDunn/acebook-node-template-team-evergreen,commitId=47134a6a348685a40e89ae8c2cc10753c61f5d61 \
-          --region us-west-2
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          
+          --github-location repository=${{ github.repository }},commitId=${{ github.sha }}
+    
