--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -10,16 +10,17 @@ jobs:
       # Step 1: Checkout code
       - uses: actions/checkout@v2
 
-
   continuous-deployment:
     runs-on: ubuntu-latest
     needs: [continuous-integration]
     if: github.ref == 'refs/heads/main'
     steps:
-      - uses: aws-actions/configure-aws-credentials@v4
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-region: eu-west-2
           role-to-assume: evergreen-acebook-codedeploy
+
       # Step 2: Create CodeDeploy Deployment
       - name: Create CodeDeploy Deployment
         id: deploy
@@ -29,4 +30,3 @@ jobs:
           --deployment-group-name team-evergreen \
           --deployment-config-name CodeDeployDefault.OneAtATime \
           --github-location repository=${{ github.repository }},commitId=${{ github.sha }}
-    
