--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,32 +1,37 @@
 name: CI/CD Pipeline
+
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
 
 jobs:
   continuous-integration:
     runs-on: ubuntu-latest
     steps:
-      # Step 1: Checkout code
-      - uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      # Add more steps as needed for building, testing, etc.
 
   continuous-deployment:
     runs-on: ubuntu-latest
-    needs: [continuous-integration]
+    needs: continuous-integration
     if: github.ref == 'refs/heads/main'
     steps:
       - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v4
+        uses: aws-actions/configure-aws-credentials@v1
         with:
-          aws-region: eu-west-2
-          role-to-assume: evergreen-acebook-codedeploy
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-west-2
 
-      # Step 2: Create CodeDeploy Deployment
       - name: Create CodeDeploy Deployment
         id: deploy
         run: |
           aws deploy create-deployment \
-          --application-name team-evergreen-codedeploy \
-          --deployment-group-name evergreen-production \
-          --deployment-config-name CodeDeployDefault.OneAtATime \
-          --github-location repository=${{ github.repository }},commitId=${{ github.sha }}
+            --application-name team-evergreen-codedeploy \
+            --github-location repository=${{ github.repository }},commitId=${{ github.sha }} \
+            --deployment-group-name evergreen-production \
+            --deployment-config-name CodeDeployDefault.OneAtATime \
+            --region us-west-2
