--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -48,7 +48,7 @@ jobs:
         run: npm run lint
 
   test:
-    name: Run Tests & Generate Coverage
+    name: Run Tests 
     runs-on: ubuntu-latest
     needs: setup
     services:
@@ -69,18 +69,11 @@ jobs:
       - name: Install Dependencies
         run: npm install
 
-      - name: Run Unit Tests with Coverage
-        run: npm run test:unit -- --coverage
+      - name: Run Unit Tests 
+        run: npm run test:unit 
 
-      - name: Run Integration Tests with Coverage
-        run: npm run test:integration -- --coverage
-
-      - name: Upload Coverage Report
-        uses: actions/upload-artifact@v4
-        with:
-          name: coverage-report
-          path: coverage
-          retention-days: 7
+      - name: Run Integration Tests 
+        run: npm run test:integration 
 
   build:
     name: Build Project
@@ -101,23 +94,3 @@ jobs:
 
       - name: Build Project
         run: npm run build
-
-  security:
-    name: Security Audit
-    runs-on: ubuntu-latest
-    needs: setup
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 23
-          cache: 'npm'
-
-      - name: Install Dependencies
-        run: npm install
-
-      - name: Run Security Audit
-        run: npm audit --audit-level=moderate
