--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,6 +27,13 @@ jobs:
         node-version: 23.x
         cache: 'npm'
     
+    - name: Start MongoDB
+      uses: supercharge/mongodb-github-action@1.12.0
+      with:
+        mongodb-version: '8.0'
+        mongodb-replica-set: test-rs
+        mongodb-port: 27017
+
     - run: npm ci
     - run: npm run build --if-present
     - run: npm run start:test
