--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -10,6 +10,21 @@ on:
     branches: [ "main" ]
 
 jobs:
+
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      name: Checkout repository
+      uses: actions/checkout@v3
+
+      name: Set up Node.js
+      uses: actions/setup-node@v3
+      with:
+      node-version: 18 # Adjust to match your project
+
+      name: Install dependencies
+      run: npm ci
+
   build:
 
     runs-on: ubuntu-latest
