--- a/package.json
+++ b/package.json
@@ -18,21 +18,21 @@
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
-    "express": "~4.16.1",
+    "express": "^4.21.2",
     "express-session": "^1.17.2",
     "hbs": "^4.1.0",
     "http-errors": "~1.6.3",
     "method-override": "^3.0.0",
     "mongodb": "^3.4.1",
-    "mongoose": "^5.8.11",
+    "mongoose": "^8.13.1",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.15"
   },
   "devDependencies": {
-    "cypress": "^12.14.0",
-    "eslint": "^8.10.0",
+    "cypress": "^14.2.1",
+    "eslint": "^8.57.1",
     "eslint-plugin-cypress": "^2.8.1",
-    "eslint-plugin-jest": "^22.21.0",
+    "eslint-plugin-jest": "^28.11.0",
     "eslint-plugin-node": "^10.0.0",
     "jest": "^27.5.1"
   },
