--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -21,7 +21,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - run: ls -a
+    - run: npm install
     # - name: Use Node.js ${{ matrix.node-version }}
     #   uses: actions/setup-node@v4
     #   with:
