--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -35,8 +35,6 @@ jobs:
       - name: Install Dependencies
         run: npm install
 
-      - name: Run ESLint
-        run: npm run lint
 
   test:
     name: Run Tests 
@@ -60,4 +58,6 @@ jobs:
         run: npm install
 
       - name: Start Server and Run Integration Tests
-        run: npx start-server-and-test "npm run start:test" http://localhost:3030 "npm run test:integration"
+        run: npx start-server-and-test "npm run start:test" http://localhost:3030 "npm run test:integration
+      
+        
