--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -22,6 +22,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - run: npm install
+    - run: sudo apt-get install -y mongodb
     - run: npm run test:unit 
     # - name: Use Node.js ${{ matrix.node-version }}
     #   uses: actions/setup-node@v4
