--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -22,6 +22,8 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - run: npm install
+    - run: sudo apt-get install gnupg curl
+    - run: echo "deb [ arch=amd64,arm64 signed-by=/usr/share/keyrings/mongodb-server-8.0.gpg ] https://repo.mongodb.org/apt/ubuntu noble/mongodb-org/8.0 multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-8.0.list
     - run: sudo apt-get update
     - run: sudo apt-get install -y mongodb-org
     - run: npm run test:unit 
