--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -10,8 +10,15 @@ on:
     branches: [ "main" ]
 
 jobs:
-  setup:
+  build:
+
     runs-on: ubuntu-latest
+
+    # strategy:
+    #   matrix:
+    #     node-version: [18.x, 20.x, 22.x]
+    #     # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+
     steps:
     - uses: actions/checkout@v4
     - name: Use Node.js '23.x'
@@ -19,6 +26,7 @@ jobs:
       with:
         node-version: 23.x
         cache: 'npm'
+    
     - name: Start MongoDB
       uses: supercharge/mongodb-github-action@1.12.0
       with:
@@ -29,9 +37,5 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
     - run: npm run start:test &
-
-  test:
-    runs-on: ubuntu-latest
-    needs: setup
-    steps: 
-      - run: npm test
+    - run: sleep 10
+    - run: npm test
