--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -3,14 +3,14 @@ name: CD
 on:
   push:
     branches:
-      - main  # Trigger the pipeline only on pushes to the main branch
+      - main  # Trigger on pushes to main
 
 jobs:
   build_and_upload:
     name: Build and Upload Artifact to S3
     runs-on: ubuntu-latest
     outputs:
-      artifact_name: ${{ steps.build_and_package.outputs.artifact_name }}  # Pass artifact name to the next job
+      latest_artifact: ${{ steps.upload.outputs.artifact_name }} # Store the artifact name
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
@@ -24,17 +24,19 @@ jobs:
         run: npm install
 
       - name: Build and Package Artifact
-        id: build_and_package  # Give this step an ID so that we can reference its output
+        id: package
         run: |
-          VERSION=$(date +%Y%m%d%H%M%S)
-          zip -r app-${VERSION}.zip .
-          echo "Artifact created: app-${VERSION}.zip"
-          echo "artifact_name=app-${VERSION}.zip" >> $GITHUB_ENV  # Use $GITHUB_ENV to store the artifact name
+          VERSION=$(date +%Y%m%d%H%M%S)  
+          ARTIFACT_NAME="app-${VERSION}.zip"
+          zip -r $ARTIFACT_NAME .
+          echo "Artifact created: $ARTIFACT_NAME"
+          echo "artifact_name=$ARTIFACT_NAME" >> $GITHUB_ENV
 
       - name: Upload Artifact to S3
+        id: upload
         run: |
-          VERSION=$(date +%Y%m%d%H%M%S)
-          aws s3 cp app-${VERSION}.zip s3://dreamteam-bucket/app-${VERSION}.zip
+          aws s3 cp ${{ env.artifact_name }} s3://dreamteam-bucket/${{ env.artifact_name }}
+          echo "artifact_name=${{ env.artifact_name }}" >> $GITHUB_ENV
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -43,11 +45,8 @@ jobs:
   deploy:
     name: Deploy to EC2
     runs-on: ubuntu-latest
-    needs: build_and_upload  
+    needs: build_and_upload
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
-
       - name: Set up AWS CLI
         uses: aws-actions/configure-aws-credentials@v1
         with:
@@ -55,9 +54,16 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: eu-west-2
 
+      - name: Get Latest Artifact from S3
+        id: latest_artifact
+        run: |
+          LATEST_FILE=$(aws s3 ls s3://dreamteam-bucket/ --recursive | sort | tail -n 1 | awk '{print $4}')
+          echo "Latest artifact: $LATEST_FILE"
+          echo "artifact_name=$LATEST_FILE" >> $GITHUB_ENV
+
       - name: Deploy to EC2 via CodeDeploy
         run: |
           aws deploy create-deployment \
             --application-name dreamteam-deploy \
             --deployment-group-name production-group \
-            --s3-location bucket=dreamteam-bucket,key=s3://dreamteam-bucket/${{ needs.build_and_upload.outputs.artifact_name }},bundleType=zip
+            --s3-location bucket=dreamteam-bucket,key=${{ env.artifact_name }},bundleType=zip
