--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -28,7 +28,7 @@ jobs:
     - run: sudo apt-get update
     - run: sudo apt-get install -y mongodb-org
     - run: sudo systemctl start mongod
-    - run: npm start:test
+    - run: npm run start:test
     - run: npm run test 
     # - name: Use Node.js ${{ matrix.node-version }}
     #   uses: actions/setup-node@v4
