--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -29,12 +29,9 @@ jobs:
     - run: sudo apt-get install -y mongodb-org
     - run: sudo systemctl start mongod
     - run: npm run start:test
+
+  tests: 
+    runs-on: ubuntu-latest
+    steps: 
+    - run: sleep 10
     - run: npm run test 
-    # - name: Use Node.js ${{ matrix.node-version }}
-    #   uses: actions/setup-node@v4
-    #   with:
-    #     node-version: ${{ matrix.node-version }}
-    #     cache: 'npm'
-    # - run: npm ci
-    # - run: npm run build --if-present
-    # - run: npm test
