--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -29,11 +29,11 @@ jobs:
     - run: sudo apt-get install -y mongodb-org
     - run: sudo systemctl start mongod
 
-  start-server:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:   
-    - uses: actions/checkout@v4
+  # start-server:
+  #   runs-on: ubuntu-latest
+  #   needs: build
+  #   steps:   
+  #   - uses: actions/checkout@v4
     - run: npm run start:test
 
   run-tests: 
