--- a/.github/workflows/install-nvm.yml
+++ b/.github/workflows/install-nvm.yml
@@ -29,3 +29,5 @@ jobs:
         run: sudo systemctl daemon-reload
       - name: Load Mongod
         run: sudo systemctl start mongod
+      - run: npm run start:test &
+      - run: npm run test
