--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -11,7 +11,6 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     strategy:
@@ -28,18 +27,16 @@ jobs:
     - run: sudo apt-get update
     - run: sudo apt-get install -y mongodb-org
     - run: sudo systemctl start mongod
-
-  # start-server:
-  #   runs-on: ubuntu-latest
-  #   needs: build
-  #   steps:   
-  #   - uses: actions/checkout@v4
-    - run: npm run start:test
-
-  run-tests: 
-    runs-on: ubuntu-latest
-    needs: build
-    steps: 
-    - uses: actions/checkout@v4
+    - run: npm run start:test &
     - run: sleep 10
     - run: npm run test 
+
+  # run-tests: 
+  #   dependsOn: 
+  #   - build
+  #   condition: 
+  
+  #   steps: 
+  #   - uses: actions/checkout@v4
+  #   - run: sleep 10
+  #   - run: npm run test 
