--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,6 +1,3 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
 name: Node.js CI
 
 on:
@@ -16,27 +13,37 @@ jobs:
     strategy:
       matrix:
         node-version: [23.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-    - uses: actions/checkout@v4
-    - run: npm install
-    - run: sudo apt-get install gnupg curl
-    - run: curl -fsSL https://www.mongodb.org/static/pgp/server-8.0.asc | sudo gpg -o /usr/share/keyrings/mongodb-server-8.0.gpg --dearmor
-    - run: echo "deb [ arch=amd64,arm64 signed-by=/usr/share/keyrings/mongodb-server-8.0.gpg ] https://repo.mongodb.org/apt/ubuntu noble/mongodb-org/8.0 multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-8.0.list
-    - run: sudo apt-get update
-    - run: sudo apt-get install -y mongodb-org
-    - run: sudo systemctl start mongod
-    - run: npm run start:test &
-    - run: sleep 10
-    - run: npm run test 
+    - name: Checkout repo
+      uses: actions/checkout@v4
 
-  # run-tests: 
-  #   dependsOn: 
-  #   - build
-  #   condition: 
-  
-  #   steps: 
-  #   - uses: actions/checkout@v4
-  #   - run: sleep 10
-  #   - run: npm run test 
+    - name: Install dependecies
+      run: npm install
+
+    - name: Install MongoDB
+      run: |
+        sudo apt-get install gnupg curl
+        curl -fsSL https://www.mongodb.org/static/pgp/server-8.0.asc | sudo gpg -o /usr/share/keyrings/mongodb-server-8.0.gpg --dearmor
+        echo "deb [ arch=amd64,arm64 signed-by=/usr/share/keyrings/mongodb-server-8.0.gpg ] https://repo.mongodb.org/apt/ubuntu noble/mongodb-org/8.0 multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-8.0.list
+        sudo apt-get update
+        sudo apt-get install -y mongodb-org
+        sudo systemctl start mongod
+        
+    - name: Start server in background
+      run: |
+        npm run start:test &
+        sleep 5
+
+    - name: Run tests
+      run: npm run test 
+
+    - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: us-east-1
+
+    - name: Deploy static site to S3 bucket
+      run: aws s3 sync . s3://<bucket-name> --delete
