--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -43,7 +43,7 @@ jobs:
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: us-east-1
+        aws-region: eu-west-2
 
     - name: Deploy static site to S3 bucket
-      run: aws s3 sync . s3://<bucket-name> --delete
+      run: aws s3 sync . s3://mantasdean-acebook --delete
