--- a/appspec.yml
+++ b/appspec.yml
@@ -1,12 +1,13 @@
 version: 0.0
 os: linux
 files:
-  - source: .
-    destination: /home/ec2-user/myapp
+  - source: /
+    destination: /home/ec2-user/app
 permissions:
-  - object: /home/ec2-user/myapp
+  - object: /home/ec2-user/app
     owner: ec2-user
     group: ec2-user
+    mode: 755
 hooks:
   BeforeInstall:
     - location: scripts/install_dependencies.sh
