--- a/appspec.yml
+++ b/appspec.yml
@@ -2,9 +2,9 @@ version: 0.0
 os: linux
 files:
   - source: /
-    destination: /home/ec2-user/app
+    destination: /home/ec2-user/app/
 permissions:
-  - object: /home/ec2-user/app
+  - object: /home/ec2-user/app/
     owner: ec2-user
     group: ec2-user
     mode: 755
