--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -46,4 +46,4 @@ jobs:
         aws-region: eu-west-2
 
     - name: Deploy static site to S3 bucket
-      run: aws s3 sync . s3://mantasdean-acebook --delete
+      run: aws s3 sync . s3://mantasdean-acebook --delete --exclude ".github/*"
